--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<main>
-  
-</main>
-
-<router-outlet />
+<app-top class="top"></app-top>
+<app-sidebar class="sidebar"></app-sidebar>
+<router-outlet></router-outlet>
+<app-footer class="footer"></app-footer>
