--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,21 +1,19 @@
-html{
-    height: 100%;
-    width: 100%;
-}
-
 .top{
-    position: fixed;
     margin-top: 0; 
     width: 100%;
 }
 
 .sidebar{
-    position: fixed;
     margin-right: 0;
 }
 
 .footer{
-    position: fixed;
-    margin-bottom: 0;
+    position: absolute;
+    bottom: 0;
     width: 100%;
+    height: 60px;
+}
+
+#mainDiv{
+    height: 90%;
 }
