--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-top class="top"></app-top>
-<app-sidebar class="sidebar"></app-sidebar>
-<router-outlet></router-outlet>
+<div id="mainDiv">
+    <app-sidebar class="sidebar"></app-sidebar>
+    <router-outlet></router-outlet>
+</div>
 <app-footer class="footer"></app-footer>
