modified:   src/app/app.component.css 	modified:   src/app/app.component.html 	modified:   src/app/footer/footer.component.css 	modified:   src/app/footer/footer.component.html 	modified:   src/app/sidebar/sidebar.component.html 	modified:   src/app/top/top.component.css 	modified:   src/app/top/top.component.html 	modified:   src/styles.css

--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,1 +1,12 @@
-<p>top works!</p>
+<header class="top-bar">
+    <div class="logo">
+        <img src="" alt="gtav-logo">
+    </div>
+    <nav class="top-menu">
+        <a href="#">Home</a>
+        <a href="#">Friends</a>
+    </nav>
+    <div class="user-profile">
+        <img src="" alt="user-profile-logo" class="profile-icon">
+    </div>
+</header>
