--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<app-top class="top"></app-top>
-<div id="mainDiv">
-    <app-sidebar class="sidebar"></app-sidebar>
-    <router-outlet></router-outlet>
+<div class="app-container">
+  <app-top></app-top>
+
+  <div class="content-wrapper">
+    <div id="main-content">
+      <router-outlet></router-outlet>
+    </div>
+
+    <app-sidebar></app-sidebar>
+  </div>
+
+  <app-footer></app-footer>
 </div>
-<app-footer class="footer"></app-footer>
