--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,9 @@
-<p>sidebar works!</p>
+<div class="sidebar">
+    <ul>
+        <li><a href="">Item1</a></li>
+        <li><a href="">Item2</a></li>
+        <li><a href="">Item3</a></li>
+        <li><a href="">Item4</a></li>
+        <li><a href="">Item5</a></li>
+    </ul>
+</div>
