--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -1,4 +1,63 @@
-p{
+.top-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
     background-color: black;
     color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 2);
 }
+
+.logo img{
+    height: 40px;
+}
+
+.top-menu{
+    display: flex;
+    gap: 20px;
+}
+
+.top-menu a{
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    transition: color 0.3s;
+}
+
+.top-menu a:hover{
+    color: #32911b;
+}
+
+.user-profile{
+    display: flex;
+    align-items: center;
+}
+
+.profile-icon{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .top-bar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .top-menu {
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 10px;
+    }
+  
+    .top-menu a {
+      font-size: 14px;
+    }
+  
+    .user-profile {
+      margin-top: 10px;
+    }
+  }
