--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,38 @@
-html, app-root, body{
+html, body{
     height: 100%;
     width: 100%;
     margin: 0;
-    padding: 0;    
+    padding: 0;
+    background-color: lightgray;
+    font-family: Arial, sans-serif;
 }
 
-body{
-    background-color: lightgray;
+.app-container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.content-wrapper{
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.main-content {
+    flex: 1;
+    padding-right: 20px; /* Optional: gives some space before the sidebar */
+  }
+
+.sidebar {
+    border-radius: 20px;
+width: 250px;
+background-color: #f4f4f4;
+padding: 20px;
+box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+position: fixed;
+top: 100px;
+right: 30px;
+height: 70%;
 }
