modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	new file:   public/grand-theft-auto-v-seeklogo.svg 	modified:   src/app/app.config.ts 	modified:   src/app/sidebar/sidebar.component.html 	modified:   src/app/sidebar/sidebar.component.ts 	modified:   src/app/top/top.component.html 	new file:   src/custom-theme.scss 	modified:   src/index.html 	modified:   src/styles.css

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,38 @@
 <div class="sidebar">
     <ul>
-        <li><a href="">Item1</a></li>
-        <li><a href="">Item2</a></li>
-        <li><a href="">Item3</a></li>
-        <li><a href="">Item4</a></li>
-        <li><a href="">Item5</a></li>
+        <li><mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>Item1</mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Item1 content</p>
+        </mat-expansion-panel></li>
+
+        <li><mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>Item2</mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Item2 content</p>
+        </mat-expansion-panel></li>
+
+        <li><mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>Item3</mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Item3 content</p>
+        </mat-expansion-panel></li>
+
+        <li><mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>Item4</mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Item4 content</p>
+        </mat-expansion-panel></li>
+
+        <li><mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>Item5</mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>Item5 content</p>
+        </mat-expansion-panel></li>
     </ul>
 </div>
