--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,6 +1,6 @@
 <header class="top-bar">
     <div class="logo">
-        <img src="" alt="gtav-logo">
+        <img src="grand-theft-auto-v-seeklogo.svg" alt="gtav-logo">
     </div>
     <nav class="top-menu">
         <a href="#">Home</a>
