--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,6 @@ html, body{
     right: 30px;
     height: 70%;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
