deleted:    public/favicon.ico 	new file:   public/fonts/Pricedown.otf 	new file:   public/unknown-user-logo.svg 	modified:   src/app/app.component.css 	modified:   src/app/app.component.html 	modified:   src/app/app.component.ts 	modified:   src/app/app.routes.ts 	new file:   src/app/page-friends/page-friends.component.css 	new file:   src/app/page-friends/page-friends.component.html 	new file:   src/app/page-friends/page-friends.component.spec.ts 	new file:   src/app/page-friends/page-friends.component.ts 	new file:   src/app/page-home/page-home.component.css 	new file:   src/app/page-home/page-home.component.html 	new file:   src/app/page-home/page-home.component.spec.ts 	new file:   src/app/page-home/page-home.component.ts 	new file:   src/app/progress-bar/progress-bar.component.html 	new file:   src/app/progress-bar/progress-bar.component.scss 	new file:   src/app/progress-bar/progress-bar.component.spec.ts 	new file:   src/app/progress-bar/progress-bar.component.ts 	modified:   src/app/sidebar/sidebar.component.css 	modified:   src/app/top/top.component.css 	modified:   src/app/top/top.component.html 	modified:   src/app/top/top.component.ts 	modified:   src/index.html 	modified:   src/styles.css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
   <div class="content-wrapper">
     <div id="main-content">
+      <app-progress-bar></app-progress-bar>
       <router-outlet></router-outlet>
     </div>
 
