--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -3,10 +3,10 @@
         <img src="grand-theft-auto-v-seeklogo.svg" alt="gtav-logo">
     </div>
     <nav class="top-menu">
-        <a href="#">Home</a>
-        <a href="#">Friends</a>
+        <a routerLink="/page-home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
+        <a routerLink="/page-friends" routerLinkActive="active" ariaCurrentWhenActive="page">Friends</a>
     </nav>
     <div class="user-profile">
-        <img src="" alt="user-profile-logo" class="profile-icon">
+        <img src="unknown-user-logo.svg" alt="user-profile-logo" class="profile-icon">
     </div>
 </header>
