--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -22,6 +22,7 @@
     text-decoration: none;
     font-weight: 500;
     font-size: 16px;
+    font-family: Pricedown;
     transition: color 0.3s;
 }
 
