modified:   src/app/app.component.css 	modified:   src/app/app.component.html 	modified:   src/app/app.routes.ts 	modified:   src/app/footer/footer.component.css 	modified:   src/app/footer/footer.component.html 	renamed:    src/app/page-friends/page-friends.component.css -> src/app/pages/CEO/page-cargo/page-cargo.component.css 	new file:   src/app/pages/CEO/page-cargo/page-cargo.component.html 	new file:   src/app/pages/CEO/page-cargo/page-cargo.component.spec.ts 	new file:   src/app/pages/CEO/page-cargo/page-cargo.component.ts 	renamed:    src/app/page-home/page-home.component.css -> src/app/pages/CEO/page-import-export/page-import-export.component.css 	new file:   src/app/pages/CEO/page-import-export/page-import-export.component.html 	new file:   src/app/pages/CEO/page-import-export/page-import-export.component.spec.ts 	new file:   src/app/pages/CEO/page-import-export/page-import-export.component.ts 	new file:   src/app/pages/CEO/page-special-vehicle-work/page-special-vehicle-work.component.css 	new file:   src/app/pages/CEO/page-special-vehicle-work/page-special-vehicle-work.component.html 	new file:   src/app/pages/CEO/page-special-vehicle-work/page-special-vehicle-work.component.spec.ts 	new file:   src/app/pages/CEO/page-special-vehicle-work/page-special-vehicle-work.component.ts 	new file:   src/app/pages/MC/page-mc-businesses/page-mc-businesses.component.css 	new file:   src/app/pages/MC/page-mc-businesses/page-mc-businesses.component.html 	new file:   src/app/pages/MC/page-mc-businesses/page-mc-businesses.component.spec.ts 	new file:   src/app/pages/MC/page-mc-businesses/page-mc-businesses.component.ts 	new file:   src/app/pages/heists/page-casino/page-casino.component.css 	new file:   src/app/pages/heists/page-casino/page-casino.component.html 	new file:   src/app/pages/heists/page-casino/page-casino.component.spec.ts 	new file:   src/app/pages/heists/page-casino/page-casino.component.ts 	new file:   src/app/pages/heists/page-cayo/page-cayo.component.css 

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,13 @@
   <app-top></app-top>
 
   <div class="content-wrapper">
-    <div id="main-content">
+    <div class="main-content">
       <app-progress-bar></app-progress-bar>
-      <router-outlet></router-outlet>
+      <div class="router-box">
+        <router-outlet></router-outlet>
+        
+      </div>
+      
     </div>
 
     <app-sidebar></app-sidebar>
