--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <p>BCC S7 2024.1</p>
+        <p>Christophe Nissille - BCC S7 2024.1</p>
     </div>
 </footer>
