--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,37 +2,45 @@
     <ul>
         <li><mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>Item1</mat-panel-title>
+                <mat-panel-title>Heists</mat-panel-title>
             </mat-expansion-panel-header>
-            <p>Item1 content</p>
+            <ul>
+                <li><a routerLink="/page-og-heists" routerLinkActive="active" ariaCurrentWhenActive="page">Original Heists</a></li>
+                <li><a routerLink="/page-doomsday" routerLinkActive="active" ariaCurrentWhenActive="page">Doomsday Heist</a></li>
+                <li><a routerLink="/page-casino" routerLinkActive="active" ariaCurrentWhenActive="page">Casino Heist</a></li>
+                <li><a routerLink="/page-cayo" routerLinkActive="active" ariaCurrentWhenActive="page">Cayo Perico Heist</a></li>
+            </ul>
         </mat-expansion-panel></li>
 
         <li><mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>Item2</mat-panel-title>
+                <mat-panel-title>CEO Work</mat-panel-title>
             </mat-expansion-panel-header>
-            <p>Item2 content</p>
+            <ul>
+                <li><a routerLink="/page-cargo" routerLinkActive="active" ariaCurrentWhenActive="page">Special Cargo</a></li>
+                <li><a routerLink="/page-import-export" routerLinkActive="active" ariaCurrentWhenActive="page">Import/Export</a></li>
+                <li><a routerLink="/page-special-vehicle-work" routerLinkActive="active" ariaCurrentWhenActive="page">Special Vehicle Work</a></li>
+            </ul>
         </mat-expansion-panel></li>
 
         <li><mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>Item3</mat-panel-title>
+                <mat-panel-title>Motorcycle Club</mat-panel-title>
             </mat-expansion-panel-header>
-            <p>Item3 content</p>
+            <ul>
+                <li><a routerLink="/page-mc-businesses" routerLinkActive="active" ariaCurrentWhenActive="page">MC Businesses</a></li>
+            </ul>
         </mat-expansion-panel></li>
 
         <li><mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>Item4</mat-panel-title>
+                <mat-panel-title>Other Businesses</mat-panel-title>
             </mat-expansion-panel-header>
-            <p>Item4 content</p>
-        </mat-expansion-panel></li>
-
-        <li><mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title>Item5</mat-panel-title>
-            </mat-expansion-panel-header>
-            <p>Item5 content</p>
+            <ul>
+                <li><a routerLink="/page-gunrunning" routerLinkActive="active" ariaCurrentWhenActive="page">Gunrunning</a></li>
+                <li><a routerLink="/page-air-freight" routerLinkActive="active" ariaCurrentWhenActive="page">Air Freight</a></li>
+                <li><a routerLink="/page-nightclub" routerLinkActive="active" ariaCurrentWhenActive="page">Nightclub</a></li>
+            </ul>
         </mat-expansion-panel></li>
     </ul>
 </div>
