--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,3 +15,13 @@
     flex: 1;
     padding-right: 20px;
   }
+
+.router-box{
+    border-radius: 20px;
+    padding: 10px;
+    background-color: #f4f4f4;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 83%;
+    height: 73%;
+}
