modified:   src/app/app.routes.ts 	new file:   src/app/pages/page-create-account/page-create-account.component.css 	new file:   src/app/pages/page-create-account/page-create-account.component.html 	new file:   src/app/pages/page-create-account/page-create-account.component.spec.ts 	new file:   src/app/pages/page-create-account/page-create-account.component.ts 	new file:   src/app/pages/page-login/page-login.component.css 	new file:   src/app/pages/page-login/page-login.component.html 	new file:   src/app/pages/page-login/page-login.component.spec.ts 	new file:   src/app/pages/page-login/page-login.component.ts 	modified:   src/app/sidebar/sidebar.component.scss 	modified:   src/app/top/top.component.css 	modified:   src/app/top/top.component.html 	modified:   src/app/top/top.component.ts

--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -55,3 +55,20 @@
       margin-top: 10px;
     }
   }
+
+  .generic{
+    background-color: black;
+    border: 0px;
+    margin: 2px;
+  }
+
+  .generic a{
+    font-family: Pricedown;
+    color: white;
+    text-decoration: none;
+  }
+
+  button a{
+    text-decoration: none;
+    color: black;
+  }
