modified:   src/app/pages/page-create-account/page-create-account.component.html 	modified:   src/app/pages/page-create-account/page-create-account.component.ts 	modified:   src/app/pages/page-login/page-login.component.css 	modified:   src/app/pages/page-login/page-login.component.html 	modified:   src/app/pages/page-login/page-login.component.ts

--- a/src/app/pages/page-create-account/page-create-account.component.html
+++ b/src/app/pages/page-create-account/page-create-account.component.html
@@ -22,6 +22,10 @@
             <td></td>
             <td><button (click)="createAccount()">Create Account</button></td>
         </tr>
+        <tr>
+            <td></td>
+            <td><b>{{message}}</b></td>
+        </tr>
     </table>
     
 </div>
