modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app.routes.ts 	modified:   src/app/pages/heists/page-og-heists/page-og-heists.component.html 	modified:   src/app/pages/page-friends/page-friends.component.html 	modified:   src/app/pages/page-friends/page-friends.component.ts 	modified:   src/app/pages/page-home/page-home.component.html 	modified:   src/app/progress-bar/progress-bar.component.html 	modified:   src/app/progress-bar/progress-bar.component.ts 	modified:   src/app/top/top.component.html 	modified:   src/app/top/top.component.ts

--- a/src/app/pages/heists/page-og-heists/page-og-heists.component.html
+++ b/src/app/pages/heists/page-og-heists/page-og-heists.component.html
@@ -1,1 +1,15 @@
-<p>page-og-heists works!</p>
+<H1>Original Apartment Heists</H1>
+<p>There are 5 Apartment heists, </p>
+<ol>
+    <li>Fleeca Heist - 2 players</li>
+    <li>Prison Break - 4 players</li>
+    <li>Humane Labs Heist - 4 players</li>
+    <li>Series A - 4 players</li>
+    <li>Pacific Standard Heist - 4 players</li>
+</ol>
+
+<p>It is required to own a high range appartment, be above level 20 and have met Lester Crest to be able to start these heists as leader.</p>
+
+
+<label for="ReadToggle">I have read this guide</label>
+<input type="checkbox" id="ReadToggle">
