--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -1,1 +1,3 @@
-<p>page-home works!</p>
+<H1>Welcome to the GTA Guide!</H1>
+<p>Take a look at all the guides, add friends to compare completion statistics and learn more about GTA online!</p>
+<small>*guides not added yet</small>
