--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -1,6 +1,6 @@
 <table>
     <tr>
         <td><p>Current progress: </p></td>
-        <td><mat-progress-bar mode="determinate" value="33"></mat-progress-bar></td>
+        <td><mat-progress-bar mode="determinate" value={{value}}></mat-progress-bar></td>
     </tr>
 </table>
